# llm-agents-pentaho-mapping

./: README.md  pyproject.toml
data/: benef_transf copy.ktr  benef_transf.ktr
documentacao/beneficiario/: beneficiario.html  beneficiario.md  org_brz_bn_beneficiario.xlsx
notebooks/: benef_transf.md  beneficiario.csv  beneficiario.html  beneficiario_table.md  bn_beneficiario_-_insert_update.md  busca_microsiga.csv  busca_microsiga.md  data_analysis_01_beneficiarios.ipynb  duckdb_output.txt  new_agent_01.ipynb  new_agent_02.ipynb  new_agent_03.ipynb  new_agent_04.ipynb  new_agent_05.ipynb  new_agent_06.ipynb  sam_familia_teto_pf_rules.csv  sam_familia_teto_pf_table.md  task_results.json  teste.csv  teste.ipynb  teste2.csv  teste2.ipynb  teste3.ipynb  teste4.ipynb  teste5.ipynb  teste6.ipynb  teste7.ipynb  teste8.ipynb  valida.ipynb
notebooks/output/: 01_beneficiario.csv  01_beneficiario_rules.csv  02_sam_familia_teto_pf.csv  02_sam_familia_teto_pf_rules.csv  03_1_busca_microsiga.csv  03_1_busca_microsiga_rules.csv  03_2_sem_setor.csv  03_2_sem_setor_rules.csv  BN_BENEFICIARIO.csv  benefici_rio.csv  busca_microsiga.csv  contrato.csv  familia_pessoa_respons_vel.csv  familia_titular_respons_vel.csv  handle_beneficiario.csv  lota__o.csv  sam_familia_teto_pf.csv  sem_setor.csv
notebooks/output_bkp/: 01_beneficiario.csv  01_beneficiario_rules.csv  01_beneficiario_rules_bkp.csv  02_sam_familia_teto_pf.csv  02_sam_familia_teto_pf_rules.csv  03_1_busca_microsiga.csv  03_1_busca_microsiga_rules.csv  03_2_sem_setor.csv  03_2_sem_setor_rules.csv  99_bn_beneficiario.csv  benefici_rio.csv  busca_microsiga.csv  contrato.csv  familia_pessoa_respons_vel.csv  familia_titular_respons_vel.csv  handle_beneficiario.csv  lota__o.csv  sam_familia_teto_pf.csv  sem_setor.csv  teste.parquet
notebooks/sql_files/: query_1.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  (+1 more)
(+5 files in other folders)
