[tool.poetry]
name = "llm-agents-pentaho-mapping"
version = "0.1.0"
description = ""
authors = ["Fabio Simoes <fabio.simoes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.10.67.post1"
llama-index-llms-ollama = "^0.2.2"
langgraph = "^0.2.10"
langchain-ollama = "^0.1.1"
pandas = "^2.2.2"
langchain = "^0.2.14"
langchain-google-genai = "^1.0.10"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
