[tool.poetry]
name = "llm-agents-pentaho-mapping"
version = "0.1.0"
description = ""
authors = ["Fabio Simoes <fabio.simoes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
llama-index = "^0.10.67.post1"
llama-index-llms-ollama = "^0.2.2"
langgraph = "^0.2.10"
langchain-ollama = "^0.1.1"
pandas = "^2.2.2"
langchain = "^0.2.14"
langchain-google-genai = "^1.0.10"
python-dotenv = "^1.0.1"
poetry-core = "^1.9.0"
pygraphviz = "^1.13"
langchain-groq = "^0.1.9"
crewai = {extras = ["tools"], version = "^0.51.1"}
polars = "^1.5.0"
duckdb = "^1.0.0"
pyarrow = "^17.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
